--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ include ':leakcanary-watcher'
 include ':leakcanary-analyzer'
 include ':leakcanary-android'
 include ':leakcanary-android-no-op'
+include ':leakcanary-android-instrumentation'
 include ':leakcanary-sample'
